--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,12 @@
 
 body {
   background-color: #020631;
+  font-family: Arial, sans-serif;
 }
 
 .app {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -10%);
+  margin-top: 5%;
+  padding: 20px;
 }
 
 .app .mainHeading h1 {
@@ -25,12 +24,6 @@ h2 {
 }
 
 .app .input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.app .input {
   margin-top: 0.8em;
   width: 20em;
   height: 2em;
@@ -40,13 +33,15 @@ h2 {
   align-items: center;
   border-radius: 6px;
   padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.app .input input {
+.app .input input  {
   width: 100%;
   height: 1.6em;
-  border-color: transparent;
-  outline-color: transparent;
+  border: none;
+  outline: none;
 }
 
 .app i {
@@ -56,34 +51,62 @@ h2 {
   color: grey;
   margin-right: 5px;
 }
-.app .todos {
+
+.todo-columns {
+  margin-top: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  justify-content: space-around; /* Align columns side by side */
+  flex-wrap: wrap; /* Ensures they stack if the screen is small */
 }
+
+.app .todos {
+  margin: 10px ;
+  background: #f8f9fa;
+  padding: 5px;
+  border-radius: 5px;
+  width:45% /* Adjust width to fit two columns */
+}
+
+.app .todos h3 {
+  text-align: center;
+  margin-bottom: 15px;
+  color: #020631;
+}
+
 .app .todos .todo {
-  margin-top: 0.8em;
-  width: 20em;
-  height: 2em;
+  margin-bottom: 0.8em;
   background-color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  border-radius: 6px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 6px;
-  padding: 5px;
+  
 }
+
+
+
 .app .todos .todo .left {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
 }
 
 .app .todos .todo .left p {
-  margin-left: 3px;
-  font-size: medium;
+  margin-left: 10px;
+  font-size: small;
   font-weight: 700;
-  font-style: normal;
   color: grey;
+  
 }
 
+.app .todos .todo .right {
+  display: flex;
+  align-items: center;
+}
+
+.app .todos .todo .right .date {
+  font-size:x-small;
+  color: #888;
+  margin-right: 3px;
+}
